syntax = "proto3";
package genapi;

option go_package = "api/genapi";

message DruidTalents {
    int32 starlight_wrath = 1;
}

message BalanceDruid {
    message BalanceDruidAgent {
    }
    BalanceDruidAgent agent = 1;

    DruidTalents talents = 2;
    
    message BalanceDruidOptions {
    }
    BalanceDruidOptions options = 3;
}
